--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,1 +1,15 @@
 @import "./pages/roadmap";
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  //background: aqua;
+}
