--- a/src/sass/pages/roadmap/_roadmap.scss
+++ b/src/sass/pages/roadmap/_roadmap.scss
@@ -65,6 +65,13 @@
     .RoadMapContent {
       height: 100%;
       display: block;
+      background-color: #f8f8f8;
+      bottom: 0;
+      left: 0;
+      position: fixed;
+      right: 0;
+      top: 46px;
+      width: 100%;
     }
 
     .GridHover {
